@@ -4635,3 +4635,5 @@
 20150104 debugger/disassemble.c: remove redundant code (Sergio).
 20150106 debugger/breakpoint.c,peripherals/disk/disk.c: avoid the use of memory
          after it is freed (thanks, clang static analyser) (Sergio).
+20150107 ui/scaler/scalers.c: remove unused code (thanks, clang static analyser)
+         (Sergio).
